--- a/Pipfile
+++ b/Pipfile
@@ -4,29 +4,16 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-gunicorn = "==20.1.0"
-django-heroku = "==0.3.1"
-psycopg2 = "==2.9.1"
-whitenoise = "==5.3.0"
+django = "*"
+gunicorn = "*"
+dj-database-url = "*"
+requests = "*"
+django-heroku = "*"
+whitenoise = "*"
 python-decouple = "*"
-dj-database-url = "==0.5.0"
-asgiref = "==3.4.1"
-certifi = "==2021.5.30"
-charset-normalizer = "==2.0.4"
-django-on-heroku = "==1.1.2"
-heroku = "==0.1.4"
-idna = "==3.2"
-importlib = "==1.0.4"
-psycopg2-binary = "==2.9.1"
-python-dateutil = "==1.5"
-pytz = "==2021.1"
-requests = "==2.26.0"
-sqlparse = "==0.4.1"
-typing-extensions = "==3.10.0.2"
-urllib3 = "==1.26.6"
-Django = "==3.2.7"
+psycopg2 = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.7.12"
+python_version = "3.9"
